# TRAB2-ARQ-AVAN

./: .gitignore  CMakeLists.txt  compile_sources.sh  generate_mapping.sh  moesi_coherency_test.cpp  perf_list.output  plot.py  plot_analysis.py  run_tests.sh  thread_core_ccd_mapping.txt
src/: bad_coherency.cpp  good_coherency.cpp
